# Eidolon_Math_Library

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: lib.rs  main.rs
src/bits/: mod.rs
src/bits/bit_operations/: mod.rs
src/bits/bit_operations/bitwise_arithmetic/: bitwise_arithmetic.rs  mod.rs
src/bits/bit_operations/bitwise_arithmetic/bitwise_arithmetic_advanced/: mod.rs
src/bits/bit_operations/bitwise_counting/: bitwise_counting.rs  mod.rs
src/bits/bit_operations/bitwise_counting/bitwise_counting_advanced/: mod.rs
src/bits/bit_operations/bitwise_logic/: bitwise_logic.rs  mod.rs
src/bits/bit_operations/bitwise_logic/bitwise_logic_advanced/: mod.rs
src/bits/bit_operations/bitwise_shifting/: bitwise_shifting.rs  mod.rs
src/bits/bit_operations/bitwise_shifting/bitwise_shifting_advanced/: mod.rs
