[package]
name = "eidolon-math"
version = "0.1.0"
edition = "2021"
authors = ["Mees"]
description = "A super low-level, no-dependency math library for the Eidolon ecosystem"
license = "Apache-2.0"
repository = "https://github.com/mees/eidolon-math"
keywords = ["math", "mathematics", "eidolon", "low-level", "no-dependencies"]
categories = ["algorithms", "data-structures", "mathematics"]

[dependencies]
# No external dependencies - keeping it super low-level as requested

[dev-dependencies]
# Development dependencies for testing and quality checks
criterion = { version = "0.5", features = ["html_reports"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
